[tool.poetry]
name = "cisco-aidefense-sdk"
version = "2.1.1"
description = "Cisco AI Defense Python SDK"
authors = [
    "Shiva Guntoju <shguntoj@cisco.com>",
    "Jayant Upadhyaya <ujayant@cisco.com>",
    "Prashant Gupta <psg07@cisco.com>",
    "Akhil Bhavanam <akbhavan@cisco.com>",
    "Rajat Upadhyaya <urajat@cisco.com>",
    "Ethan Zhou <ethanz@cisco.com>",
    "Prachi Srivastava <prachisr@cisco.com>",
    "Bharat Gupta <bgupta2@cisco.com>"
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]
packages = [{include = "aidefense"}]

[tool.poetry.dependencies]
aiohttp = "^3.13.2"
python = "^3.9"
requests = "^2.32.3"
uuid = "^1.30"
pydantic = "^2.12.5"
tenacity = "^9.1.2"
cisco-aibom = {version = ">=0.4.0", optional = true, python = ">=3.11,<3.14"}

[tool.poetry.extras]
aibom = ["cisco-aibom"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = ">=3.10.0"
pytest-httpx = ">=0.30.0"
black = "^24.3.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
