# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crewai-agent-example"
version = "0.1.0"
description = "CrewAI agent example with agentsec protection"
authors = ["Cisco <ai-defense@cisco.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
cisco-aidefense-sdk = { path = "../../../..", develop = true }

# CrewAI framework with native provider integrations
# litellm extra is required for Vertex AI support
crewai = { version = ">=0.28.0", extras = ["azure-ai-inference", "litellm"] }
# SECURITY: Pinned to 1.81.1. v1.82.7 and v1.82.8 were compromised in a supply chain
# attack (TeamPCP, 2026-03-24). See: https://github.com/BerriAI/litellm/issues/24518
litellm = "1.81.1"

# AWS SDK for Bedrock
boto3 = ">=1.28.0"

# OpenAI SDK (for OpenAI provider)
openai = ">=1.0.0"

# Google Cloud Vertex AI SDK (for Vertex AI with ADC)
google-cloud-aiplatform = ">=1.50.0"

# MCP client library for tool integration
mcp = ">=1.0.0"

# Environment variable loading from .env files
python-dotenv = ">=1.0.0"

# YAML config parsing
pyyaml = ">=6.0.0"

# OpenTelemetry for adapter integration
opentelemetry-sdk = ">=1.20.0"
opentelemetry-api = ">=1.20.0"

# Required by agentsec patchers (not yet declared in SDK pyproject.toml)
wrapt = ">=1.14.0"
